# CSC648-Teaching

./: .gitignore  README.md  flake.nix  go.mod  main.go  pyproject.toml  spec.yaml
bruno/: Create Question.bru  Delete Question.bru  Get Question.bru  Get Questions.bru  Get Random Questions.bru  Modify Question.bru  bruno.json  prompt.md
bruno/environments/: default.bru
handlers/: questions.go
models/: question.go
questions_bank/: main.py
questions_bank/controllers/: question_controller.py
questions_bank/repos/: question_repo.py
questions_bank/services/: question_service.py
repos/: question.go
services/: question.go  question_test.go
tests/: bad_prompt.md  code2prompt_context.md  good_prompt.md  test_question_repo.py  test_questions_bad.py  test_questions_good.py
