[project]
name = "questions-bank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
where = ["."] 
include = ["questions_bank"]
exclude = []
namespaces = false

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
